--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-session": "^1.15.6",
     "jimp": "^0.6.1",
     "mongodb": "^2.2.36",
+    "mongoose": "^5.7.14",
     "multer": "^1.4.1",
     "mysql": "^2.15.0",
     "nodemailer": "^6.1.1",
