--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "smix-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "node src/app.js start",
     "test": "smix-backend"
@@ -15,7 +15,7 @@
     "nodejs",
     "mongo"
   ],
-  "author": "devlabs",
+  "author": "karthisgk",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
